# libBLEProvisionee

./: .gitignore  .project  CMakeEnv.cmake  CMakeLists.txt  CMake_nRF5x.cmake  CMake_nRF5x_v14_2.cmake  main.cpp  main2.cpp  objects  oldreadme.md  readme.md
CMakeScripts/: CMakeEnv.cmake
cruft/: CMakeLists3.txt
objects/: advertiser.h  advertiserDirect.cpp  appHandler.cpp  appHandler.h  bleProtocol.cpp  characteristic.cpp  protocolStack.cpp  protocolStack.h  provisioner.cpp  provisioner.h  provisioner2.cpp  softdevice.cpp  softdevice.h  softdeviceHandler.cpp  softdeviceSleeper.h  uuid.cpp
